--- a/src/jenkinsfile
+++ b/src/jenkinsfile
@@ -57,9 +57,18 @@ pipeline {
                     '''
                     sh '''
                     KUBECONFIG=/root/.kube/config kubectl apply -f kubernetes_manfiest/ --namespace aymen
-                    kubectl wait --for=condition=ready pod -l app: backend -n aymen
-                    kubectl get svc  aymen
                     '''
+                    retry(3) {
+                        // Retry up to 3 times
+                        sh '''
+                        PUBLIC_IP=$(kubectl get svc frontend -o=jsonpath='{.status.loadBalancer.ingress[0].ip}')
+                        if [ -z "$PUBLIC_IP" ]; then
+                            echo "Public IP not ready, retrying..."
+                            exit 1
+                        fi
+                        '''
+                    }
+
                 }
             }
         }
