--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontendaymen
 spec:
   selector:
-    app: frontend
+    app: frontendaymen
   type: LoadBalancer
   ports:
     - protocol: TCP
@@ -14,11 +14,11 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: frontendaymen
 spec:
   selector:
     matchLabels:
-      app: frontend
+      app: frontendaymen
   replicas: 1
   # strategy:
   #   type: RollingUpdate
@@ -28,12 +28,11 @@ spec:
   template:
     metadata:
       labels:
-        app: frontend
+        app: frontendaymen
     spec:
       containers:
-        - name: frontend
+        - name: frontendaymen
           image: aymenbentaieb/myappfrontend:1.0.0
-          # image: crudappcontainerregistry.azurecr.io/frontend:production
           ports:
             - containerPort: 3000
           imagePullPolicy: Always
