--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -36,3 +36,6 @@ spec:
           ports:
             - containerPort: 3000
           imagePullPolicy: Always
+          env:
+            - name: REACT_APP_BACKEND_URL
+              value: http://backendaymen:3700
